--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.1.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1421.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
