--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DB_PORT=5432
 DB_USERNAME='postgres'
 DB_PASSWORD='admin'
 DB_NAME='postgres'
+
+AWS_S3_BUCKET = "nestjs-bhumfile-bucket"
+AWS_S3_ACCESS_KEY = "AKIAQSY4G3XFC2ZL24EX"
+AWS_S3_KEY_SECRET = "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"
