--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1421.0",
     "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
