--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
-DB_HOST='localhost'
+DB_HOST='postgres.cctzg6zjlm2h.ap-south-1.rds.amazonaws.com'
 DB_PORT=5432
 DB_USERNAME='postgres'
-DB_PASSWORD='admin'
+DB_PASSWORD='adminadmin'
 DB_NAME='postgres'
 
 AWS_S3_BUCKET = "nestjs-bhumfile-bucket"
