--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.1.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1421.0",
+    "git": "^0.1.5",
     "multer": "^1.4.5-lts.1",
+    "nodejs": "^0.0.0",
+    "npm": "^9.8.1",
     "pdf-lib": "^1.17.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vscode": "^1.1.37"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
